Added check to filter out devices that are not used in Domoticz

--- a/drivers/domoticz_device/pair/domoticzsettings.html
+++ b/drivers/domoticz_device/pair/domoticzsettings.html
@@ -22,7 +22,7 @@
         let password = document.getElementById('password').value;
         let hostname = document.getElementById('hostname').value;
         let port = document.getElementById('port').value;
-        if(!username || !password || !hostname || !port){
+        if(!hostname || !port){
             Homey.alert('Please fill in all fields');
         }else {
 
