--- a/settings/index.html
+++ b/settings/index.html
@@ -42,7 +42,7 @@
                 HomeyAPI.api('GET', 'logs/', function(err, result) {
                     if(!err) {
                         document.getElementById('log').innerHTML = "";
-                        for (var i = (result.length - 1); i >= 0; i--) {
+                        for (let i = (result.length - 1); i >= 0; i--) {
                             document.getElementById('log').innerHTML += JSON.stringify(result[i]).replace(/\"/g, "").replace(/\\n/g, "");
                             document.getElementById('log').innerHTML += "\n"; // "<br />";
                         }
